--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>Rock Paper Scissors</name>
 	<description>Rock paper scissors game</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,6 +85,19 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>19</source>
+					<target>19</target>
+					<compilerArgs combine.children="append">
+						<arg>--enable-preview</arg>
+						<arg>--add-modules=jdk.incubator.vector</arg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
